[package]
name = "limithub-code-block-sdk"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Rust SDK of LimitHub Code Block."

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.58"
tokio = "1.36.0"
axum = { version = "0.7.1" }
